[gd_scene load_steps=25 format=3 uid="uid://vok0idicae3h"]

[ext_resource type="Script" uid="uid://dohc56wq4tpr6" path="res://scenes/screen_premain.gd" id="1_kegej"]
[ext_resource type="Texture2D" uid="uid://cg7n7grr1n4je" path="res://sadx out/title/bg.png" id="2_kegej"]
[ext_resource type="Texture2D" uid="uid://c17g5o1jwde8k" path="res://sadx out/title/fg.png" id="3_t4nxl"]
[ext_resource type="FontFile" uid="uid://bqfgjjocebx3" path="res://sadx out/font/Roboto-Italic-VariableFont_wdth,wght.ttf" id="3_thwdk"]
[ext_resource type="AudioStream" uid="uid://bwoaawhvc3bgw" path="res://sadx out/bgm/title2.ogg" id="5_gwfv3"]
[ext_resource type="FontFile" uid="uid://2ru8kn45as4h" path="res://sadx out/font/Roboto-VariableFont_wdth,wght.ttf" id="6_2tedf"]
[ext_resource type="Texture2D" uid="uid://bejoswe86hg5r" path="res://sadx out/title/copyright.png" id="6_gwfv3"]

[sub_resource type="Shader" id="Shader_t4nxl"]
code = "shader_type canvas_item;

#define center vec2(0.5, 0.5);

uniform float speed : hint_range(0.0, 50.0) = 1.0;
uniform float frequency : hint_range(0.0, 200.0) = 10.0;
uniform float amplitude : hint_range(0.0, 0.1) = 0.02;
uniform float decay : hint_range(0.0, 10.0) = 3.0;
uniform float center_decay_divider : hint_range(0.01, 1.0) = 1.0;
uniform float edge_amplitude : hint_range(0.0, 0.05) = 0.01;
uniform float edge_margin : hint_range(0.0, 0.5) = 0.1;
uniform float shadow_intensity : hint_range(0.0, 1.0) = 0.3;
uniform float edge_shadow_intensity : hint_range(0.0, 1.0) = 0.3;
uniform float aspect_ratio = 1.0;

float saw(float input) {
	input /= 2.0 * PI;
	return -(input - floor(input));
}

void fragment() {
    vec2 uv = UV;
    
    // Circles remain 1:1
    vec2 aspect_uv = vec2(uv.x, uv.y / aspect_ratio);
    vec2 aspect_center = vec2(0.5, 0.5 / aspect_ratio);
    
    vec2 offset = aspect_uv - aspect_center;
    float dist = length(offset);
    float attenuation = exp(-decay * dist);

    // Ripples with damping
    float central_ripple = sin(dist * frequency - TIME * speed) * amplitude;
    float dist_top = length(aspect_uv - vec2(0.5, -edge_margin / aspect_ratio));
    float edge_ripple_top = sin(dist_top * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_top);
    float dist_bottom = length(aspect_uv - vec2(0.5, (1.0 + edge_margin) / aspect_ratio));
    float edge_ripple_bottom = sin(dist_bottom * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_bottom);
    float dist_left = length(aspect_uv - vec2(-edge_margin, 0.5 / aspect_ratio));
    float edge_ripple_left = sin(dist_left * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_left);
    float dist_right = length(aspect_uv - vec2(1.0 + edge_margin, 0.5 / aspect_ratio));
    float edge_ripple_right = sin(dist_right * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_right);
	
	float central_shadow = saw(dist * frequency - TIME * speed) * amplitude * (attenuation / center_decay_divider);
    float dist_top_shadow = length(aspect_uv - vec2(0.5, -edge_margin / aspect_ratio));
    float edge_shadow_top = saw(dist_top_shadow * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_top_shadow);
    float dist_bottom_shadow = length(aspect_uv - vec2(0.5, (1.0 + edge_margin) / aspect_ratio));
    float edge_shadow_bottom = saw(dist_bottom_shadow * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_bottom_shadow);
    float dist_left_shadow = length(aspect_uv - vec2(-edge_margin, 0.5 / aspect_ratio));
    float edge_shadow_left = saw(dist_left_shadow * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_left_shadow);
    float dist_right_shadow = length(aspect_uv - vec2(1.0 + edge_margin, 0.5 / aspect_ratio));
    float edge_shadow_right = saw(dist_right_shadow * frequency - TIME * speed) * edge_amplitude * exp(-decay * dist_right_shadow);

    // Apply displacement
    aspect_uv += normalize(offset) * central_ripple;
    aspect_uv += edge_ripple_top * normalize(aspect_uv - vec2(0.5, -edge_margin / aspect_ratio));
    aspect_uv += edge_ripple_bottom * normalize(aspect_uv - vec2(0.5, (1.0 + edge_margin) / aspect_ratio));
    aspect_uv += edge_ripple_left * normalize(aspect_uv - vec2(-edge_margin, 0.5 / aspect_ratio));
    aspect_uv += edge_ripple_right * normalize(aspect_uv - vec2(1.0 + edge_margin, 0.5 / aspect_ratio));
    uv = vec2(aspect_uv.x, aspect_uv.y * aspect_ratio);

    // Shadow
    vec4 color = texture(TEXTURE, uv);
    float shadow = central_shadow;
    shadow = smoothstep(-0.02, 0.02, shadow) * shadow_intensity;
	float edge_shadow = edge_shadow_top + edge_shadow_bottom + edge_shadow_left + edge_shadow_right;
    edge_shadow = smoothstep(-0.02, 0.02, edge_shadow) * edge_shadow_intensity;
    color.rgb *= (1.05 - (shadow + edge_shadow));
	//color.rgb *= (1.0 - edge_shadow);
    
    COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_togta"]
shader = SubResource("Shader_t4nxl")
shader_parameter/speed = 20.0
shader_parameter/frequency = 145.0
shader_parameter/amplitude = 0.006
shader_parameter/decay = 2.6
shader_parameter/center_decay_divider = 0.8
shader_parameter/edge_amplitude = 0.004
shader_parameter/edge_margin = 0.3
shader_parameter/shadow_intensity = 0.2
shader_parameter/edge_shadow_intensity = 0.2
shader_parameter/aspect_ratio = 1.33

[sub_resource type="Gradient" id="Gradient_l1mpm"]
offsets = PackedFloat32Array(0, 0.746094)
colors = PackedColorArray(0, 0.529688, 0.0993163, 1, 0, 0.439216, 0.0823529, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a2b45"]
gradient = SubResource("Gradient_l1mpm")

[sub_resource type="FontVariation" id="FontVariation_ck2tf"]
base_font = ExtResource("3_thwdk")
variation_opentype = {
2003072104: 100,
2003265652: 900
}
variation_embolden = 0.3
variation_transform = Transform2D(1.1, 0, 0, 1, 0, 0)
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_87p4l"]
font = SubResource("FontVariation_ck2tf")
font_size = 30
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_2tedf"]
base_font = ExtResource("6_2tedf")
variation_opentype = {
2003072104: 100,
2003265652: 800
}
variation_transform = Transform2D(1.05, 0, 0, 1, 0, 0)
spacing_glyph = 1

[sub_resource type="LabelSettings" id="LabelSettings_723a0"]
font = SubResource("FontVariation_2tedf")
font_size = 14
font_color = Color(0, 0, 0, 1)
outline_size = 6
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.631373)
shadow_offset = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_l6eiq"]
base_font = ExtResource("6_2tedf")
variation_opentype = {
2003072104: 100,
2003265652: 900
}
variation_embolden = 0.5
variation_transform = Transform2D(1.15, 0, 0, 1, 0, 0)
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_thwdk"]
font = SubResource("FontVariation_l6eiq")
font_size = 23
font_color = Color(0, 0, 0, 1)
outline_size = 10
shadow_size = 14
shadow_color = Color(0, 0, 0, 0.513726)
shadow_offset = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_c8it4"]
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 0.466667)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ifsnf"]
gradient = SubResource("Gradient_c8it4")
width = 32

[sub_resource type="Animation" id="Animation_c8it4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelPressStart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.0784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG/FGDupe:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG/GlobalFader:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG/FGDupe:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopLayer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6eiq"]
resource_name = "blink"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LabelPressStart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.75, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.0784314), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gwfv3"]
resource_name = "in"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG/FGDupe:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.533333),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Color(1, 1, 1, 0.313726), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG/GlobalFader:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG/FGDupe:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.5, 0.533333),
"transitions": PackedFloat32Array(2, 0.5, 0.5, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TopLayer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 1.83333, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_thwdk"]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("BG/GlobalFader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LabelPressStart:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BG/FGDupe:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(0.35, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG/FGDupe:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.313726)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8it4"]
_data = {
&"RESET": SubResource("Animation_c8it4"),
&"blink": SubResource("Animation_l6eiq"),
&"in": SubResource("Animation_gwfv3"),
&"out": SubResource("Animation_thwdk")
}

[node name="ScreenPremain" type="Control" node_paths=PackedStringArray("focus_on_enter", "bg")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kegej")
focus_on_enter = NodePath("ButtonStart")
bg = NodePath("BG")
bg_fades = 2
metadata/_edit_lock_ = true

[node name="BG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_togta")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kegej")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="FG" type="TextureRect" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 106.0
offset_top = 44.0
offset_right = -86.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_t4nxl")
expand_mode = 1
stretch_mode = 5

[node name="FGDupe" type="TextureRect" parent="BG"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 106.0
offset_top = 44.0
offset_right = -86.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(224, 156)
texture = ExtResource("3_t4nxl")
expand_mode = 1
stretch_mode = 5

[node name="GlobalFader" type="ColorRect" parent="BG"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Header" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 88.0
grow_horizontal = 2
texture = SubResource("GradientTexture1D_a2b45")

[node name="Label" type="Label" parent="Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"
label_settings = SubResource("LabelSettings_87p4l")
vertical_alignment = 1

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gwfv3")
autoplay = true
bus = &"Music"

[node name="AudioVoice" type="AudioStreamPlayer" parent="."]
bus = &"Voice"

[node name="TopLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TopLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -200.0
offset_right = 24.5
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_gwfv3")

[node name="LabelCopyright" type="Label" parent="TopLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = 163.0
offset_right = 161.5
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
text = "© SEGA ENTERPRISES, LTD., 1998,1999"
label_settings = SubResource("LabelSettings_723a0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPressStart" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = 126.0
offset_right = 107.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
text = "PressEnterButton"
label_settings = SubResource("LabelSettings_thwdk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FakeTrailL" type="TextureRect" parent="LabelPressStart"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -11.0
offset_top = 1.0
offset_bottom = -3.0
grow_vertical = 2
texture = SubResource("GradientTexture1D_ifsnf")
expand_mode = 1

[node name="FakeTrailR" type="TextureRect" parent="LabelPressStart"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.5
offset_top = 6.0
offset_right = 16.5
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture1D_ifsnf")
expand_mode = 1
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c8it4")
}
autoplay = "in"
speed_scale = 1.75
next/in = &"blink"

[node name="ButtonStart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
flat = true
metadata/_edit_lock_ = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
